Fixed dog of the month image on mobile

--- a/app/javascript/src/home.scss
+++ b/app/javascript/src/home.scss
@@ -16,6 +16,7 @@
 
 .dog-of-the-month-image {
     width: 400px;
+    max-width: 90%;
     height: 400px;
     object-fit: cover;
     border-radius: 10px;
